RESOLVED FIXED279034
softexia.com: `logo` of the website is hidden behind search bar compared to other browsers
https://bugs.webkit.org/show_bug.cgi?id=279034
Summary softexia.com: `logo` of the website is hidden behind search bar compared to o...
Ahmad Saleem
Reported 2024-09-02 14:06:09 PDT
Created attachment 472407 [details] Screenshot (Safari vs Other browser) Hi Team, While going through this website, I noticed this bug, so I thought to report it. *** Steps to Reproduce *** 1) Go to - http://www.softexia.com 2) Look at the logo on top left corner (area) *** Expected Result *** Logo shouldn't be hindered with searchbar *** Actual Result *** Logo is clipped ___ Just raising so we can fix it. Thanks!
Attachments
Screenshot (Safari vs Other browser) (539.70 KB, image/png)
2024-09-02 14:06 PDT, Ahmad Saleem
no flags
Test reduction (221 bytes, text/html)
2024-09-02 14:53 PDT, alan
no flags
Fixed screenshot (317.85 KB, image/png)
2024-09-02 20:37 PDT, alan
no flags
Patch (6.19 KB, patch)
2024-09-03 11:41 PDT, alan
no flags
[fast-cq]Patch (6.19 KB, patch)
2024-09-03 15:17 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2024-09-02 14:06:21 PDT
alan
Comment 2 2024-09-02 14:53:31 PDT
Created attachment 472408 [details] Test reduction
alan
Comment 3 2024-09-02 20:37:15 PDT
Created attachment 472411 [details] Fixed screenshot This is some incorrectly computed enclosing value when child inline level box is not baseline aligned (inside a top/bottom aligned inline box). Have a fix locally, will post a patch soon.
alan
Comment 4 2024-09-03 11:41:00 PDT
alan
Comment 5 2024-09-03 15:17:12 PDT
Created attachment 472428 [details] [fast-cq]Patch
EWS
Comment 6 2024-09-03 16:16:54 PDT
Committed 283122@main (29f9a15327c9): <https://commits.webkit.org/283122@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472428 [details].
Note You need to log in before you can comment on or make changes to this bug.