softexia.com: `logo` of the website is hidden behind search bar compared to other browsers https://bugs.webkit.org/show_bug.cgi?id=279034 <rdar://problem/135156043>

Reviewed by Antti Koivisto.

An inline level box inside a top aligned inline box affects the parent inline box's top position depending on
its on vertical alignment. While baseline aligned boxes contribute their ascent, other alignments may make the nested box stick out less (or more).

e.g. <span style="vertical-align: top"><img style="vertical-align: baseline"></span>
______________________________________________
   _________________                           line box
  |   _______        top aligned inline box
  |  |       |
  |  |       |   baseline aligned inline level box inside top aligned inline box
  |  |_______|
  |_________________

______________________________________________

vs. <span style="vertical-align: top"><img style="vertical-align: middle"></span>

______________________________________________
      _______                                  line box
   __|       |______
  |  |       |        top aligned inline box
  |  |_______|
  |            middle aligned inline level box inside top aligned inline box
  |
  |_________________

______________________________________________

* LayoutTests/fast/inline/nested-vertical-alignment-with-top-expected.html: Added.
* LayoutTests/fast/inline/nested-vertical-alignment-with-top.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.cpp:
(WebCore::Layout::LineBoxVerticalAligner::layoutBoundsForInlineBoxSubtree const):

Canonical link: https://commits.webkit.org/283122@main